# Pandas_DS

./: README.md  anime_analysis.py  anime_plot.py  pandas_lecture.ipynb  pyproject.toml
learning/: data_preparation.py  dataframe.py  filter.py  grouping_aggregation.py  merge.py  read_data.py  series.py  statistic.py  task1.py  task2.py  task3.py  test.xlsx  test1.xlsx
